[tool.poetry]
name = "zhipa"
version = "0.0.0"
description = "Website based on Django"
authors = ["Nikita Zhiga <assisken@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

cssselect = "1.1.0"
django = "3.2.1"
django-editor-widgets = "3.0"
django-chroniker = "1.0.22"
django-colorfield = "0.4.1"
django-compressor = "2.4.1"
django-constance = {extras = ["database"], version = "2.8.0"}
django-debug-toolbar = "3.2.1"
django-extensions = "3.1.3"
django-filter = "2.4.0"
django-htmlmin = "0.11.0"
django-registration = "3.1.2"
django-sass-processor = "1.0.1"
django-split-settings = "1.0.1"
djangorestframework = "3.12.4"
funcy = "1.15"
jinja2 = "2.11.3"
libsass = "0.20.1"
lxml = "4.6.3"
mistune = "0.8.4"
openpyxl = "3.0.7"
psycopg2-binary = "2.8.3"
python-dotenv = "0.17.1"
transliterate = "1.10.2"
uwsgi = "2.0.19.1"

[tool.poetry.dev-dependencies]
black = "21.8b0"
django-stubs = "1.9.0"
djangorestframework-stubs = "1.4.0"
flake8 = "3.9.2"
flake8-assertive = "1.3.0"
isort = "5.9.3"
mypy = "0.910"
parameterized = "0.8.1"
types-requests = "2.25.6"

[tool.black]
exclude = '''
    migrations/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
skip = '''
    migrations
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
